Fixes #28425: Adjust spacing in the directives page structure

--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-directives.scss
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-directives.scss
@@ -130,6 +130,10 @@
 .wbBaseFieldLabel .tw-bs .ruddericon {
     top: -2px;
 }
+
+#tagForm label{
+  font-weight: normal;
+}
 #technicalDetails > .directiveTechnicalInfo:first-child{
   margin-top:0;
 }
@@ -379,6 +383,17 @@ table.directiveGroupDef, table.directiveVarDef, table.directiveSectionDef {
 
 
 /* === FOLDABLE SECTIONS === */
+.groupFieldset{
+  & + .groupFieldset {
+    margin-top: 2rem;
+  }
+  &.foldedSection + .groupFieldset {
+    margin-top: 1rem;
+  }
+  &.foldableSection div.section-title {
+    margin-bottom: 0;
+  }
+}
 .section-title {
   font-size: 22px;
   cursor: default;
@@ -431,7 +446,7 @@ div.unfoldedSection div.section-title:before,div.foldedSection div.section-title
 .foldableSection .foldableSection > .section-title{
   border-bottom: none;
   color: #041922DD;
-  margin-bottom: 8px;
+  margin-bottom: 8px !important;
   transition-duration: .2s;
   cursor: pointer;
 }
@@ -447,9 +462,9 @@ div.unfoldedSection div.section-title:before,div.foldedSection div.section-title
 .sectionFieldset.foldableSection:before{
   content:"";
   position: absolute;
-  top: 30px;
+  top: 34px;
   bottom: 0;
-  left: 12.5px;
+  left: 10px;
   width: 2px;
   background-color: #d6deef;
   transition: background-color .2s;
@@ -469,9 +484,13 @@ div.unfoldedSection div.section-title:before,div.foldedSection div.section-title
 table.directiveGroupDef{
   border-left: 2px solid #d6deef;
   transition: border-left-color .2s;
-}
-table.directiveGroupDef:hover{
-  border-left-color: #13beb7;
+  &:hover{
+    border-left-color: #13beb7;
+  }
+
+  & > tbody > tr:first-child > td:first-child .section-title{
+    margin-top : 10px;
+  }
 }
 
 div.unfoldedSection div.section-title:before,
